# binaural-cycles-android

./: .gitignore  README.md  build.sh  build_debug_on_phone.sh  commit.sh  gradle  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/debug/res/values/: strings.xml
app/src/debug/res/values-en/: strings.xml
app/src/main/: AndroidManifest.xml
app/src/main/java/com/binaural/beats/: BinauralBeatsApp.kt  MainActivity.kt
app/src/main/java/com/binaural/beats/service/: BinauralPlaybackService.kt
app/src/main/java/com/binaural/beats/ui/: BinauralBeatsApp.kt
app/src/main/java/com/binaural/beats/ui/components/: BottomPlaybackPanel.kt  ChannelSettingsCard.kt  CurrentFrequenciesCard.kt  FrequencyGraph.kt  MiniFrequencyGraph.kt  PlaybackControls.kt  PointEditor.kt
app/src/main/java/com/binaural/beats/ui/navigation/: Navigation.kt
app/src/main/java/com/binaural/beats/ui/screens/: PresetEditScreen.kt  PresetListScreen.kt
app/src/main/java/com/binaural/beats/viewmodel/: BinauralViewModel.kt
app/src/main/java/com/binauralcycles/: BinauralCyclesApp.kt  MainActivity.kt
app/src/main/java/com/binauralcycles/di/: DomainModule.kt  ServiceModule.kt
app/src/main/java/com/binauralcycles/service/: BinauralPlaybackService.kt  FileStorageServiceImpl.kt  PlaybackControllerImpl.kt  ServiceLifecycleManager.kt
app/src/main/java/com/binauralcycles/service/helpers/: AudioFocusManager.kt  HeadsetManager.kt  MediaSessionManager.kt  NotificationHelper.kt
app/src/main/java/com/binauralcycles/ui/components/: BottomPlaybackPanel.kt  ChannelSettingsCard.kt  CurrentFrequenciesCard.kt  FrequencyGraph.kt  MiniFrequencyGraph.kt  MiniGraphCache.kt  PlaybackControls.kt  PointEditor.kt
app/src/main/java/com/binauralcycles/ui/navigation/: Navigation.kt
app/src/main/java/com/binauralcycles/ui/screens/: PresetEditScreen.kt  PresetListScreen.kt  SettingsScreen.kt
app/src/main/java/com/binauralcycles/ui/theme/: AudioConstants.kt  Dimensions.kt  GraphConstants.kt  SliderDefaults.kt
app/src/main/java/com/binauralcycles/viewmodel/: BinauralViewModel.kt  PlaybackViewModel.kt  PresetEditViewModel.kt  PresetListViewModel.kt  SettingsViewModel.kt
app/src/main/java/com/binauralcycles/viewmodel/events/: PresetEditEvent.kt  PresetListEvent.kt  SettingsEvent.kt
app/src/main/java/com/binauralcycles/viewmodel/state/: EditingStateRepository.kt  PlaybackUiState.kt  PresetEditUiState.kt  PresetListUiState.kt  SettingsUiState.kt  UiState.kt
app/src/main/res/drawable/: ic_launcher_background.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_notification.xml  ic_pause.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-en/: strings.xml
app/src/test/java/com/binauralcycles/di/: TestControllerModule.kt  TestRepositoryModule.kt
core/audio/: build.gradle.kts
core/audio/src/main/cpp/: CMakeLists.txt
core/audio/src/main/cpp/include/: AudioGenerator.h  BinauralEngine.h  BufferPackagePlanner.h  Config.h  Interpolation.h  Wavetable.h
core/audio/src/main/cpp/src/: AudioGenerator.cpp  BinauralEngine.cpp  Wavetable.cpp  jni.cpp
core/audio/src/main/cpp/tests/: BufferPackageTest.cpp  CMakeLists.txt  android_stub.h
core/audio/src/main/java/com/binaural/core/audio/: AudioConstants.kt
core/audio/src/main/java/com/binaural/core/audio/di/: AudioModule.kt
core/audio/src/main/java/com/binaural/core/audio/engine/: BinauralAudioEngine.kt  NativeAudioEngine.kt  NativeInterpolation.kt  binaural.code-workspace
core/audio/src/main/java/com/binaural/core/audio/model/: BinauralPreset.kt  Interpolation.kt
core/domain/: build.gradle.kts
core/domain/src/main/java/com/binaural/core/domain/model/: BinauralPreset.kt  Interpolation.kt  SampleRate.kt
core/domain/src/main/java/com/binaural/core/domain/repository/: PlaybackStateRepository.kt  PresetRepository.kt  SettingsRepository.kt
core/domain/src/main/java/com/binaural/core/domain/service/: AudioEngineInterface.kt  FileStorageService.kt  PlaybackController.kt
core/domain/src/main/java/com/binaural/core/domain/usecase/: DeletePresetUseCase.kt  DuplicatePresetUseCase.kt  ExportPresetUseCase.kt  GetActivePresetUseCase.kt  HandleHeadsetEventUseCase.kt  ImportPresetUseCase.kt  PlayPresetUseCase.kt  PlaybackUseCase.kt  PresetUseCase.kt  SavePresetUseCase.kt  SettingsUseCase.kt  StopPlaybackUseCase.kt  UpdateFrequenciesUseCase.kt
core/domain/src/main/java/com/binaural/core/domain/util/: PresetNameUtils.kt
core/domain/src/test/java/com/binaural/core/domain/model/: BinauralPresetTest.kt  FrequencyCurveTest.kt  InterpolationTest.kt  RelaxationModeSettingsTest.kt
core/domain/src/test/java/com/binaural/core/domain/test/: FakeFileStorageService.kt  FakePlaybackController.kt  FakePlaybackStateRepository.kt  FakePresetRepository.kt  FakeSettingsRepository.kt
core/domain/src/test/java/com/binaural/core/domain/usecase/: DeletePresetUseCaseTest.kt  (+11 more)
core/ui/: build.gradle.kts
data/preferences/: build.gradle.kts
data/preferences/src/main/java/com/binaural/data/local/: BinauralDatabase.kt
data/preferences/src/main/java/com/binaural/data/preferences/: BinauralPreferencesRepository.kt
data/preferences/src/main/java/com/binaural/data/repository/: PlaybackStateRepositoryImpl.kt  PresetRepositoryImpl.kt  SettingsRepositoryImpl.kt
data/preferences/src/main/res/values/: strings.xml
data/preferences/src/main/res/values-en/: strings.xml
docs/: architecture_best_practices.md  architecture_refactoring_guide.md  architecture_refactoring_plan.md  audio_engine_architecture.md  buffer_package_architecture_plan.md
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
fastlane/metadata/android/en-US/changelogs/: 2.txt  3.txt  4.txt  7.txt  8.txt
fastlane/metadata/android/ru-RU/: full_description.txt  short_description.txt
fastlane/metadata/android/ru-RU/changelogs/: 2.txt  3.txt  4.txt  5.txt  7.txt  8.txt
gradle/: libs.versions.toml
metadata/: com.binauralcycles.yml
(+15 files in other folders)
